--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('wp-default.css');
-@import url('fixed.css');
+@import url('fixed1200.css');
 @import url('fluid.css');
 @import url('fixedresponsive.css');
 @import url('fluidresponsive.css');
